header logo update

--- a/css/style.css
+++ b/css/style.css
@@ -184,3 +184,12 @@ body {
   font-size: 18px;
   padding: 10px;
 }
+
+.logo {
+  width: 15%;
+  margin-top: 5px;
+}
+
+.logo img {
+  width: 100%;
+}
